# sfml_imgui_test

./: .gitmodules  CMakeLists.txt  MyApplication.cpp  MyApplication.hpp  README.md  main.cpp
Framework/: Application.hpp  Color.hpp  Framework.cpp  Framework.hpp
logging/: ConsoleLogger.cpp  ConsoleLogger.hpp  FileLogger.cpp  FileLogger.hpp  Logger.cpp  Logger.hpp
